--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -624,35 +624,35 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YuZ-RY-exp">
                                 <rect key="frame" x="0.0" y="56" width="414" height="703"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="of1-3z-JdX">
-                                    <size key="itemSize" width="414" height="475"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="of1-3z-JdX">
+                                    <size key="itemSize" width="413" height="405"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendsPhotosIdentifier" id="bTw-El-MTm" customClass="FriendsPhotosCollectionViewCell" customModule="VeKa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="475"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" reuseIdentifier="friendsPhotosIdentifier" id="bTw-El-MTm" customClass="FriendsPhotosCollectionViewCell" customModule="VeKa" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="149" width="413" height="405"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NYx-7q-Qec">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="475"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="413" height="405"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5VI-9E-FtY">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="413" height="405"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="5VI-9E-FtY" secondAttribute="height" multiplier="1:1" id="6pv-Yt-YtO"/>
+                                                        <constraint firstAttribute="width" secondItem="5VI-9E-FtY" secondAttribute="height" multiplier="1:1" id="TgS-dK-BRc"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="5VI-9E-FtY" firstAttribute="top" secondItem="NYx-7q-Qec" secondAttribute="top" id="9OK-9S-J3J"/>
-                                                <constraint firstItem="5VI-9E-FtY" firstAttribute="leading" secondItem="NYx-7q-Qec" secondAttribute="leading" id="KpS-od-Wrx"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5VI-9E-FtY" secondAttribute="bottom" id="KpY-Ab-dwf"/>
-                                                <constraint firstAttribute="trailing" secondItem="5VI-9E-FtY" secondAttribute="trailing" id="PyZ-aB-bKZ"/>
+                                                <constraint firstItem="5VI-9E-FtY" firstAttribute="leading" secondItem="NYx-7q-Qec" secondAttribute="leading" id="FNv-5M-wEc"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5VI-9E-FtY" secondAttribute="bottom" id="cH6-gK-iog"/>
+                                                <constraint firstAttribute="trailing" secondItem="5VI-9E-FtY" secondAttribute="trailing" id="lvj-HP-Neo"/>
+                                                <constraint firstItem="5VI-9E-FtY" firstAttribute="top" secondItem="NYx-7q-Qec" secondAttribute="top" id="onp-nz-0wE"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="414" height="475"/>
+                                        <size key="customSize" width="413" height="405"/>
                                         <connections>
                                             <outlet property="friendsPhotos" destination="5VI-9E-FtY" id="Ri8-sx-IUC"/>
                                         </connections>
@@ -662,10 +662,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="pJu-On-QRb" firstAttribute="bottom" secondItem="YuZ-RY-exp" secondAttribute="bottom" id="98l-aE-V1t"/>
                             <constraint firstItem="YuZ-RY-exp" firstAttribute="top" secondItem="pJu-On-QRb" secondAttribute="top" id="BAf-ic-1ty"/>
                             <constraint firstItem="pJu-On-QRb" firstAttribute="trailing" secondItem="YuZ-RY-exp" secondAttribute="trailing" id="NAD-I9-EFR"/>
                             <constraint firstItem="YuZ-RY-exp" firstAttribute="leading" secondItem="pJu-On-QRb" secondAttribute="leading" id="iDe-C8-OAD"/>
+                            <constraint firstItem="pJu-On-QRb" firstAttribute="bottom" secondItem="YuZ-RY-exp" secondAttribute="bottom" id="qXb-C3-bBH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pJu-On-QRb"/>
                     </view>
