--- a/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
+++ b/VeKa/Resourses/Storyboard/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                             <color key="titleColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="IIs-IH-TQs" kind="show" identifier="fromLoginController" id="Hu6-O4-3PT"/>
+                                            <segue destination="IIs-IH-TQs" kind="show" identifier="fromLoginController" customClass="CustomSegue" customModule="VeKa" customModuleProvider="target" id="Hu6-O4-3PT"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SMb-eg-yzY" customClass="LoadingView" customModule="VeKa" customModuleProvider="target">
